# Custom-Earplug-Project

./: .gitignore  LICENSE  README.md
LOT1_Preparation_Validation_Protocol/: Protocole_injection.md  Readme_Workpackage_map.md
LOT2_Ear_Impressions/: Readme_Workpackage_map.md  report_notes.md
LOT3&4_3D_modelling_and_silicone/: A_3D_meshing_of_the_Impressions.md  B_Mesh_processing.md
LOT5_acoustic_filter_simulation/: README_dev.md
LOT5_acoustic_filter_simulation/Codes_Earplugs/Dev/: new_plan.md  original_plan.md
LOT5_acoustic_filter_simulation/Codes_Earplugs/Showcases/: README.md
LOT5_acoustic_filter_simulation/Theory/A10_wbs6/: theory_losses.md
LOT5_acoustic_filter_simulation/toolkitsd/Toolkitsd_acoustic/: .gitignore  setup.cfg
LOT5_acoustic_filter_simulation/toolkitsd/Toolkitsd_acoustic/src/toolkitsd/acoustic/: __init__.py  pressure_gen.py
LOT5_acoustic_filter_simulation/toolkitsd/Toolkitsd_acoustmm/: README.md  setup.cfg
LOT5_acoustic_filter_simulation/toolkitsd/Toolkitsd_acoustmm/src/toolkitsd/acoustmm/: __init__.py  acoustic_params.py  analytic.py  geometry.py  mode_cutoffs.py  postprocessing.py
LOT5_acoustic_filter_simulation/toolkitsd/Toolkitsd_acoustmm/src/toolkitsd/acoustmm/elements/: __init__.py  base.py  boundaries.py  ducts.py  end_corrections.py  frozen.py  infinite_layers.py  loss_model.py  lumped.py  porous.py  resonators.py
LOT5_acoustic_filter_simulation/toolkitsd/Toolkitsd_acoustmm/src/toolkitsd/acoustmm/plotting/: __init__.py  waveguide.py
LOT5_acoustic_filter_simulation/toolkitsd/Toolkitsd_acoustmm/tests/: conftest.py  test_acoustic_params.py  test_boundaries_phase2.py  test_ducts_flow.py  test_ducts_viscothermal.py  test_elastic_slab_models.py  test_elements_phase1.py  test_geometry_builder.py  test_mode_cutoffs.py  test_munjal_reference.py  test_platewall_analytic.py  test_porous_jca_layer.py  test_series_impedance_elements.py
LOT5_acoustic_filter_simulation/toolkitsd/Toolkitsd_porous/: setup.cfg
LOT5_acoustic_filter_simulation/toolkitsd/Toolkitsd_porous/src/toolkitsd/porous/: __init__.py  material_bank.py  materials.py  materiau3.plk  measurement.py  medium.py  models.py  responses.py  utils.py
LOT5_acoustic_filter_simulation/toolkitsd/Toolkitsd_porous/tests/: test_example_regression.py  test_material_bank.py  test_materials_utils.py  test_measurement_estimators.py  test_models.py  test_responses_integration.py
(+177 files in other folders)
