[metadata]
name = toolkitsd-acoustic
version = 2.0
description =
license = GPL-3.0
author = Samuel Dupont
author_email = samu.dupont@laposte.net

[options]
python_requires = >=3.7
zip_safe = False
install_requires=
    numpy
    scipy
    matplotlib

package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src


