[metadata]
name = toolkitsd-acoustmm
version = 0.1.0.dev0
description = Transfer Matrix Method (TMM) acoustic simulation engine — ducts, porous layers, thin plates, and ear canal modelling
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
author = Sot Dujo

keywords =
    acoustics
    tmm
    transfer matrix method
    earplug
    insertion loss
    muffler
    jca
    viscothermal
    impedance

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Physics
    Topic :: Multimedia :: Sound/Audio

[options]
python_requires = >=3.12
zip_safe = False
include_package_data = True

package_dir =
    = src

# Namespace packages (PEP 420)
packages = find_namespace:

install_requires =
    numpy>=1.24
    scipy>=1.10
    matplotlib>=3.7

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-benchmark>=4.0.0
    pytest-cov>=3.0.0
    ruff>=0.5
    mypy>=1.7
    sphinx>=7
    sphinx-rtd-theme>=2
docs =
    sphinx>=7
    sphinx-rtd-theme>=2

[options.packages.find]
where = src
include =
    toolkitsd*
exclude =
    tests*
    docs*
