[metadata]
name = toolkitsd-porous
version = 0.1.0
description = Porous material acoustic models (JCA, Miki) refactored from toolkitsd examples
license = GPL-3.0
author = Samuel Dupont
author_email = samu.dupont@laposte.net

[options]
python_requires = >=3.12
zip_safe = False
install_requires=
    numpy
    scipy
    matplotlib

package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
